--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     position: relative;
     background-position: center;
     background-size: cover;
+    overflow-x: hidden;
 }
 .navbar {
     display: flex;
@@ -129,3 +130,194 @@
     }
 
 }
+
+
+.courses{
+    text-align: center;
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
+}
+
+h1{
+    font-size: 32px;
+    font-weight: 600;
+
+}
+
+p{
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    color:#777;
+    padding: 10px;
+
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 34px;
+
+}
+
+.course-col{
+    padding: 20px 12px;
+    background: #fff3f3;
+    flex-basis: 31%;
+    border-radius: 10px;
+    /* margin: 23px; */
+    margin:0 0 5% 2%;
+    /* margin:0 2%; */
+    cursor: pointer;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+h3{
+    text-align: center;
+    font-weight: 300;
+    margin: 10px;
+}
+
+.course-col:hover{
+    box-shadow: 0 0 20px 0px rgba(4,9,30,0.7);
+}
+
+@media(max-width:700px){
+    .row{
+        flex-direction: column;
+    }
+}
+
+
+/* our campus section designing starts here */
+
+
+.our-campus{
+    text-align: center;
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
+}
+
+.campus-col{
+    flex-basis: 32%;
+    border-radius: 10px;
+    overflow-x: hidden;
+    margin-bottom: 5%;
+    position: relative;
+
+}
+.campus-col img{
+    width: 100%;
+    display: block;
+}
+
+.layer{
+    background: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+    /* display: block; */
+}
+
+
+.layer:hover{
+    background: rgba(226, 0, 0, 0.7);
+}
+
+.layer h3{
+    position: absolute;
+    font-size: 26px;
+    font-weight: 500;
+    color:#fff;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: 0.5s;
+    /* display: none; */
+    opacity: 0;
+
+}
+.layer:hover h3{
+    bottom: 49%;
+    /* display: block; */
+    opacity:1;
+
+}
+
+
+/* our facilitites section designing starts here */
+
+.our-facilities{
+    text-align: center;
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;   
+}
+
+.col-facilities{
+    flex-basis: 31%;
+    border-radius: 10px;    
+    margin-bottom: 5%;
+    text-align: left;
+
+}
+.col-facilities img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.col-facilities h3{
+    text-align: left;
+}
+
+
+/* testimonials section start here */
+
+
+.testimonials{
+    text-align: center;
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
+
+}
+
+.testimonial-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    display: flex;
+    background: #fff3f3;
+    /* padding: 20px 10px; */
+    padding: 25px;
+    margin-bottom: 5%;
+    text-align: left;
+    cursor: pointer;
+
+}
+.testimonial-col img{
+    height: 40px;
+    border-radius: 50%;
+    margin-left: 5px;
+    margin-right: 30px;
+}
+
+.testimonial-col p{
+    padding:0;
+}
+.testimonial-col h3{
+    text-align: left;
+    margin-top: 12px;
+}
+
+.testimonial-col i{
+    color: yellow;
+    font-size: 20px;
+    margin-left: 5px;
+}
+
+
